--- a/SimpleChatBot.ipynb
+++ b/SimpleChatBot.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path='/root/Documents/Data/chatterbot/chatterbot/data/english/'\n",
+    "path='/path/'\n",
     "dir=os.listdir(path)"
    ]
   },
